--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -38,7 +38,7 @@
                 this.rotate = true;
                 this.info = 1;
                 this.wireframe = false;
-                this.wireframe.color = '#FFFFFF';
+                this.wireframeColor = 'ff0000';
                 this.models[this.modelIndex].object3D.children[0].material.color.set('#ff0000');
 
                 vrInterface.addButton('next', '#next', () => {
@@ -55,6 +55,7 @@
                     self.models[self.modelIndex].object3D.scale.set(self.info, self.info, self.info);
                     self.models[self.modelIndex].object3D.position.y = self.info;
                     self.models[self.modelIndex].object3D.children[0].material.wireframe = self.wireframe;
+                    self.models[self.modelIndex].object3D.children[0].material.color.set(self.wireframeColor);
                     vrInterface.showMessage(`${self.models[self.modelIndex].getAttribute('name')} model loaded`);
                 });
 
@@ -122,10 +123,17 @@
                 });
 
                 vrInterface.addButton('wireframe', '#wireframe', () => {
-                    self.models[self.modelIndex].object3D.children[0].material.wireframe = !self.models[self.modelIndex].object3D.children[0].material.wireframe;
+                    if (self.models[self.modelIndex].object3D.children[0].material.wireframe) {
+                        self.models[self.modelIndex].object3D.children[0].material.wireframe = false;
+                        self.models[self.modelIndex].object3D.children[0].material.color.set('#ff0000');
+                        this.wireframeColor = '#ff0000';
+                    } else {
+                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;
+                        self.models[self.modelIndex].object3D.children[0].material.color.set('#000000');
+                        this.wireframeColor= '#000000';
+                    }
                     this.wireframe = self.models[self.modelIndex].object3D.children[0].material.wireframe;
                     vrInterface.showMessage(`Wireframe is ${self.models[self.modelIndex].object3D.children[0].material.wireframe ? 'on' : 'off'}`);
-
                 });
 
                 document.addEventListener('pointerlockchange', (event) => {
