--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -38,7 +38,7 @@
                 this.rotate = true;
                 this.info = 1;
                 this.wireframe = false;
-                this.wireframeColor = 'ff0000';
+                this.wireframeColor = '#000';
 
                 vrInterface.addButton('next', '#next', () => {
                     self.models[self.modelIndex].object3D.visible = false;
@@ -54,7 +54,7 @@
                     self.models[self.modelIndex].object3D.scale.set(self.info, self.info, self.info);
                     self.models[self.modelIndex].object3D.position.y = self.info;
                     self.models[self.modelIndex].object3D.children[0].material.wireframe = self.wireframe;
-                    self.models[self.modelIndex].object3D.children[0].material.color.set(self.wireframeColor);
+                    self.models[self.modelIndex].object3D.children[0].material.emissive.set(self.wireframeColor);
                     vrInterface.showMessage(`${self.models[self.modelIndex].getAttribute('name')} model loaded`);
                 });
 
@@ -74,6 +74,25 @@
                     self.models[self.modelIndex].object3D.position.y = self.info;
                     self.models[self.modelIndex].object3D.children[0].material.wireframe = self.wireframe;
                     vrInterface.showMessage(`${self.models[self.modelIndex].getAttribute('name')} model loaded`);
+                });
+
+                vrInterface.addButton('decrease', '#decrease', () => {
+                    if (this.info == 0.5) {
+                        vrInterface.showMessage('Min size reached already')
+                    }
+                    if (self.models[self.modelIndex].object3D.position.y == 1) {
+                        self.models[self.modelIndex].object3D.scale.set(0.5, 0.5, 0.5);
+                        self.models[self.modelIndex].object3D.position.y = 0.5;
+                        this.info = 0.5;
+                        vrInterface.showMessage('Size decreased')
+                    }
+                    if (self.models[self.modelIndex].object3D.position.y == 2) {
+                        self.models[self.modelIndex].object3D.scale.set(1, 1, 1);
+                        self.models[self.modelIndex].object3D.position.y = 1;
+                        this.info = 1;
+                        vrInterface.showMessage('Size decreased')
+                    }
+
                 });
 
 
@@ -96,24 +115,6 @@
 
                 });
 
-                vrInterface.addButton('decrease', '#decrease', () => {
-                    if (this.info == 0.5) {
-                        vrInterface.showMessage('Min size reached already')
-                    }
-                    if (self.models[self.modelIndex].object3D.position.y == 1) {
-                        self.models[self.modelIndex].object3D.scale.set(0.5, 0.5, 0.5);
-                        self.models[self.modelIndex].object3D.position.y = 0.5;
-                        this.info = 0.5;
-                        vrInterface.showMessage('Size decreased')
-                    }
-                    if (self.models[self.modelIndex].object3D.position.y == 2) {
-                        self.models[self.modelIndex].object3D.scale.set(1, 1, 1);
-                        self.models[self.modelIndex].object3D.position.y = 1;
-                        this.info = 1;
-                        vrInterface.showMessage('Size decreased')
-                    }
-                
-                });
 
                 vrInterface.addButton('rotation', '#rotation', () => {
                     self.rotate = !self.rotate;
@@ -124,12 +125,12 @@
                 vrInterface.addButton('wireframe', '#wireframe', () => {
                     if (self.models[self.modelIndex].object3D.children[0].material.wireframe) {
                         self.models[self.modelIndex].object3D.children[0].material.wireframe = false;
-                        self.models[self.modelIndex].object3D.children[0].material.color.set('#ff0000');
-                        this.wireframeColor = '#ff0000';
+                        self.models[self.modelIndex].object3D.children[0].material.emissive.set('#000');
+                        this.wireframeColor = '#000';
                     } else {
-                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;
-                        self.models[self.modelIndex].object3D.children[0].material.color.set('#000000');
-                        this.wireframeColor= '#000000';
+                        self.models[self.modelIndex].object3D.children[0].material.wireframe = true;                        
+                        self.models[self.modelIndex].object3D.children[0].material.emissive.set('#ffffff');
+                        this.wireframeColor= '#ffffff';
                     }
                     this.wireframe = self.models[self.modelIndex].object3D.children[0].material.wireframe;
                     vrInterface.showMessage(`Wireframe is ${self.models[self.modelIndex].object3D.children[0].material.wireframe ? 'on' : 'off'}`);
@@ -177,7 +178,7 @@
         <a-entity light="type:directional" position="25 30 20"></a-entity>
         <a-entity light="color: #fff; castShadow:true;" position="25 30 20"></a-entity>
 
-        <a-entity id="tetrahedron" name="Tetrahedron" class="menu-model" geometry="primitive: tetrahedron; radius: 1"
+        <a-entity id="tetrahedron" name="Tetrahedron" class="menu-model" geometry="primitive: tetrahedron; radius: 1; detail: 0"
             material="color:#ff0000" position="0 1 -3" shadow="receive: true" visible="true">
         </a-entity>
         <a-entity id="box" name="Cube" class="menu-model" geometry="primitive: box; width: 1; height: 1; depth: 1"
