smooth shaded diseases models and updated links' images

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <a href="projects/vascular-diseases.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Vascular Diseases</div>
-                        <img src="img/vascular-diseases/vascular-diseases.jpg" alt="example of stroke"
+                        <img src="img/vascular-diseases/vascular-diseases.png" alt="example of stroke"
                             style="width:100%;">
                     </div>
                 </a>
