--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -33,10 +33,13 @@
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
-            <p>The vascular diseases are  a class of diseases of  the blood vessels – the arteries and veins of the circulatory system. 
-            There are several types of those diseases and they can affect almost any part of the body. 
-            Stroke, aneurysm, and deep vein thrombosis are some of the most common vascular diseases and their signs and symptoms vary from each type to another. 
-            The vascular diseases commonly occurs at sites of turbulent blood flow, such as the arteries when the blood flow changes direction abruptly.</p>
+            <p>The vascular diseases are a class of diseases of the blood vessels – the arteries and veins of the
+                circulatory system.
+                There are several types of those diseases and they can affect almost any part of the body.
+                Stroke, aneurysm, and deep vein thrombosis are some of the most common vascular diseases and their signs
+                and symptoms vary from each type to another.
+                The vascular diseases commonly occurs at sites of turbulent blood flow, such as the arteries when the
+                blood flow changes direction abruptly.</p>
         </div>
 
         <div class="w3-container w3-row ">
@@ -69,7 +72,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/vascular-diseases-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Vascular-Disieses/vascular-disease.png') center;">
+                        style="background: url('img/Vascular-Disieses/blur.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen
@@ -94,7 +97,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/vascular-diseases-application-VR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Vascular-Disieses/stenosis.jpg') center;">
+                        style="background: url('img/Vascular-Disieses/blur-vr.jpeg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Virtual Reality
