--- a/projects/src/vascular-diseases-application.html
+++ b/projects/src/vascular-diseases-application.html
@@ -227,6 +227,8 @@
         </div>
     </div>
 
+    <div id="output"></div>
+
     <script>
         function toggleContent() {
             if (window.innerWidth >= 768) return;
@@ -243,7 +245,8 @@
     </script>
 
     <script src="../libs/three/three.js"></script>
-    <script src="../libs/three/controls/OrbitControls.js"></script>
+    <!-- <script src="../libs/three/controls/OrbitControls.js"></script> -->
+    <script src="../libs/three/controls/TrackballControls.js"></script>
     <script src="../libs/util/Stats.js"></script>
     <script src="../libs/util/loadScreen/LoadScreenDraco.js"></script>
     <script src="../libs/loaders/GLTFLoader.js"></script>
