added orbits option and movement features

--- a/projects/src/vascular-diseases-application-VR.html
+++ b/projects/src/vascular-diseases-application-VR.html
@@ -203,7 +203,7 @@
         <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" color="#666666"></a-plane>
 
         <a-entity
-            vr-interface="dimension: 3 2; theta: 90; rho: 0; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584;"
+            vr-interface="dimension: 3 2; orbits:1 2 3; theta: 90; rho: 0; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584;"
             config button-controls></a-entity>
 
         <a-entity id="rig" position="0 0 0" rotation="0 0 0">
